--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
+    "axios": "^0.19.0",
+    "install": "^0.12.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react_ujs": "^2.5.0"
+    "react_ujs": "^2.5.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
