--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "railsGame",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.7",
     "axios": "^0.19.0",
     "install": "^0.12.2",
     "prop-types": "^15.7.2",
@@ -14,7 +13,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "yarn": "^1.16.0"
+    "webpack": "^4.35.3",
+    "yarn": "^1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
