--- a/config/database.yml
+++ b/config/database.yml
@@ -6,9 +6,12 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
+  host: db
+  username: postgres
+  password:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  encoding: unicode
 
 
 # development:
